# OI-Code-2

./: .autocp  111.cpp  123.fps  1233.pbs  Biorhythms.cpp  C - Palindromic in Both Bases.c  CMakeLists.txt  Choose_Hotel.cpp  D - Transmission Mission.c  D.cpp  I.cpp  MyOutput.out  README.md  Untitled-1.cpp  YBT1121_Differnt.cpp  abc417_c.cpp  abc417_d.cpp  abc417_e.cpp  abc417_f.cpp  beautiful.cpp  d.out  hackk.in  input.txt  network.out  pydas.py  snm.cpp  test.c  test.cpp  test.py  untitled1.cpp  未命名1.cpp  未命名3.cpp
.cph/: .Luogu_P_5307.c_e8d30ccfc7665a49b8932bf47044033a.prob  .Untitled-1.cpp_8ce82823283a73d7a978311da9af3541.prob
2025.10.10 Saturday oiClass/: sosoo.cpp  sosqrt.cpp  splay.cpp
2025.10.14/: a.cpp  b.cpp  c.cpp  d.cpp
2025.10.14 Tuesday oiClass & JSSWOJ/: A.c  B.c  C.c
2025.10.15 Wednesday oiClass/: fire.cpp
2025.10.18 Saturday oiClass/: bitop.cpp
2025.10.21 Tuesday oiClass/: fibonacci.cpp
2025.10.25 Saturday oiClass/: A. divide.cpp
2025.7.10 Thursday oiClass/: A. Guess Numbers.cpp  B. Quarrel.cpp  C DpSk.cpp  C DpSk.py  C. Numbers Choosing.cpp
2025.7.11 Friday oiClass/: A. Palindrome Divide.cpp  A.c  B. Better Price.c  C. Head-Tail Match.cpp  SSS.cpp
2025.7.19 Saturday JSSWOJ/: A_Wind_And_Travel.cpp  B_Dairies.cpp  C_Washing.cpp
2025.7.27 Sunday JSSWOJ/: A_TETA.cpp  B_KRIZA.cpp  C_ACM.cpp  D_JANJE.cpp  E_PROSJEK.cpp  E_gen.cpp  F_POLICE.cpp  data.in
2025.7.5 Saturday oiClass/: A. Sitcom.cpp  B. Card.cpp  C. seq.cpp  T2_std.cpp
2025.7.6 Sunday oiClass/: A. Color-same Triangle.cpp  C. Add Plans.cpp
2025.7.8 Tuesday oiClass/: A PDAFX.cpp  A. Wildcard.cpp  B.Tree.cpp  C. Wooden_Sticks.cpp  C.Stick.py  未命名3.cpp
2025.7.9 Wednesday oiClass/: A-Unstable_Route.cpp  B-Flip_Directed_Graph.cpp  C-Make_a_Sequence_in_a_Table.cpp
2025.8.11 CF Private/: A.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  K.cpp  L.cpp  M.cpp  out1.out
2025.8.28 Thursday JSSWOJ/: #A. Sequence.cpp  #B. Generate MST.cpp
2025.8.29 Friday JSSWOJ/: #A. Dvoboj.cpp  #B. Tablica.cpp
2025.9.10 Wednesday oiClass/: #A.Grid_Exchange.cpp  #B. Brick Place.cpp
(+173 files in other folders)
