cmake_minimum_required(VERSION 3.31)
project(OI_Code_New_)

set(CMAKE_CXX_STANDARD 14)

add_executable(OI_Code_New_
        "2025.7.5 Saturday oiClass/A. Sitcom.cpp"
        "2025.7.5 Saturday oiClass/B. Card.cpp"
        "2025.7.5 Saturday oiClass/C. seq.cpp"
        "2025.7.5 Saturday oiClass/T2_std.cpp"
        "2025.7.5 Saturday oiClass/T4_std.cpp"
        "2025.7.6 Sunday oiClass/A. Color-same Triangle.cpp"
        "2025.7.6 Sunday oiClass/C. Add Plans.cpp"
        "ABC413/A - Content Too Large.cpp"
        "ABC413/B - cat 2.cpp"
        "ABC413/C - Large Queue.cpp"
        "ABC413/D - Make Geometric Sequence.cpp"
        "ABC413/E - Reverse 2^i.cpp"
        "ABC413/G - Big Banned Grid.cpp"
        Aleph1022_Problems/AT_agc005_d_sim_K_Perm_Counting.cpp
        Aleph1022_Problems/CF1515E_Phoenix_and_Computers.cpp
        Aleph1022_Problems/LOJ2178_Luogu_P3713_Motive_Train.cpp
        Aleph1022_Problems/loj2178_sol.cpp
        Aleph1022_Problems/LOJ3136_Luogu_P5307_Mobitel.cpp
        Aleph1022_Problems/LOJ3211_Luogu_P5664_What_does_Emiya_eat_today.cpp
        Misc/Luogu_B2105_Grid_Times.cpp
        Misc/Luogu_P3390_Grid_Power.c
        "Misc/Luogu_P4314_CPU_Monitor(Matrix_Exponentiation).cpp"
        Misc/Luogu_P3373_Segment_Tree_2.cpp
        Virtual_Tree/LOJ3789_Luogu_P2495_SDOI2011_War_of_Attrition.cpp
        "2025.7.8 Tuesday oiClass/A. Wildcard.cpp"
        "2025.7.8 Tuesday oiClass/B.Tree.cpp"
        "2025.7.8 Tuesday oiClass/C. Wooden_Sticks.cpp"
        "2025.7.9 Wednesday oiClass/A-Unstable_Route.cpp"
        "2025.7.9 Wednesday oiClass/B-Flip_Directed_Graph.cpp"
        "2025.7.9 Wednesday oiClass/C-Make_a_Sequence_in_a_Table.cpp"
        Mobius_Inversion/Number_Pairs_Count.cpp
        Misc/JSSWOJ_1338_Sqrt_Decomposition.cpp
        "2025.7.10 Thursday oiClass/A. Guess Numbers.cpp"
        "2025.7.10 Thursday oiClass/B. Quarrel.cpp"
        "2025.7.10 Thursday oiClass/C. Numbers Choosing.cpp"
        Manacher/Disjoint_Palindrome_Strings.cpp
)